--- a/Project/assets/Css/Login.scss
+++ b/Project/assets/Css/Login.scss
@@ -46,18 +46,19 @@ body {
                     input:focus {
                          border-color: white !important;
                     }
+                    
                }
 
                button.login {
                     background: transparent;
                     width: 315px;
                     padding: 10px;
-                    border-radius: 10px;
+                    border-radius: 20px;
                     border: none;
                     border: 1px solid $second-color;
                     margin: auto;
                     display: block;
-                    color: white;
+                    color:$second-color;
                }
 
 
@@ -86,12 +87,14 @@ body {
                     margin: auto;
                     text-align: center;
                     font-size: 12px;
+                    color: #707070;
+
                }
 
                p.des {
-                    padding: 0px 19px;
+                    padding: 0px 20%;
                     text-align: center;
-                    font-size: 15px;
+                    font-size: 14px;
                     line-height: 1.6;
                     color: #707070;
                }
@@ -126,11 +129,11 @@ body {
                     padding-bottom: 30px;
 
                     input {
-                         width: auto !important;
+                         width: 50% !important;
                     }
 
                     button.login {
-                         width: auto !important;
+                         width: 50% !important;
                     }
 
                }
@@ -139,7 +142,13 @@ body {
                     width: 100%;
                     padding-bottom: 30px;
 
+                    .soicalMedia {
+                         padding-bottom: 50px !important;
+                    }
+
                }
+
+               
 
           }
 
